--- a/assets/styles.css
+++ b/assets/styles.css
@@ -124,6 +124,7 @@
     font-size: 1.5rem;
     cursor: pointer;
     color: #111827;
+    margin-top:-10px;
   }
   .home .nav-toggle {
     color: white;
